# top-down

./: CMakeLists.txt
external-libraries/includes/tmx/: MapLoader.hpp
include/: Game.h  SpriteTest.h  Window.h
src/: RPG GAME.cpp  Window.cpp  main.cpp
src/Assets/Menu/: spash-screen-image  splash logo.ase
src/Assets/characters/: Npc1.ase
src/Assets/maps/: shader_example.tmx
src/Game/: Game.cpp  Game.h  GameState.cpp  GameState.h  SpriteTest.cpp
src/Game/Entities/: NPCBase.cpp  NPCBase.h  Player.cpp  Player.h  StartNPC.cpp  StartNPC.h
src/Map/: FindMapLayer.cpp  FindMapLayer.h  Map.cpp  Map.h
src/Menu/: MenuState.cpp  MenuState.h  SplashScreen.cpp  SplashScreen.h
src/Pause/: PauseState.cpp  PauseState.h
src/Utils/: Animation.cpp  Animation.h  Assets.h  Collision.cpp  Collision.h  Globals.h  TextBox.cpp  TextBox.h  Utils.cpp  Utils.h
